# sas_test_generator

./: .gitignore  .gitlab-ci.yml  ARCHITECTURE.md  README.md  guide-complet-final-migration-sas-python (1).md  guide-complet-final-migration-sas-python (2).md  guide-complet-final-migration-sas-python.md  guide-complet-test-migration-sas-python.md  guide-final-test-migration-sas-python.md  guide-revise-test-migration-sas-python.md  pyproject.toml  sas-test-coverage-complement.md  sas-test-coverage-workflow.md
ci/central-pipeline/: .gitlab-ci.yml  README.md  projects.yml
ci/central-pipeline/scripts/: generate.sh
docs/: COMMENT_CA_MARCHE.md  GUIDE_UTILISATION.md
examples/: sample_program.sas
examples/multi_file_project/: main.sas
examples/multi_file_project/includes/: init.sas
examples/multi_file_project/macros/: macro_risque.sas
examples/multi_file_project/programmes/: etape1_classification.sas  etape2_aggregation.sas
src/sas_data_generator/: __init__.py  cli.py  coverage.py  dataset_generator.py  include_resolver.py  sas_instrumenter.py  sas_parser.py  sas_runner.py
tests/: test_coverage.py  test_dataset_generator.py  test_include_resolver.py  test_sas_instrumenter.py  test_sas_parser.py
